Fix banner alignment

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -877,6 +877,7 @@ span.game-mode-button {
     font-size: 50px;
     font-weight: 700;
     text-shadow: 3px 3px #1c1c1c;
+    text-align: left;
     border-radius: 4px;
     padding: 80px;
     padding-left: 40px;
